# lab01-inheritance-BrenesRi

./: CMakeLists.txt  Lab01Inheritance.cpp
src/: Derived1.cpp  Derived1.h  Derived2.cpp  Derived2.h  Lab01Inheritance.cpp  Main.cpp  base.cpp  base.h
